--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,6 @@
 sdk.dir=C:\\Users\\DELL\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Do Not Open\\flutter
-flutter.buildMode=debug
+flutter.Mode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
+flutter.buildMode=debug
