--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-buildscript {
+script {
     ext.kotlin_version = '1.7.10'
     repositories {
         google()
@@ -6,6 +6,7 @@ buildscript {
     }
 
     dependencies {
+        classpath 'com.android.tools.:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -17,14 +18,14 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.Dir = '../'
 subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    project.Dir = "${rootProject.Dir}/${project.name}"
 }
 subprojects {
     project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+    delete rootProject.Dir
 }
