--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,7 +8,8 @@ pluginManagement {
     }
     settings.ext.flutterSdkPath = flutterSdkPath()
 
-    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+    include("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+
 
     repositories {
         google()
