--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\Do Not Open\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\DELL\StudioProjects\glazel
+FLUTTER_APPLICATION_PATH=C:\Users\DELL\StudioProjects\glaxel
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
